--- a/src/css/main.css
+++ b/src/css/main.css
@@ -130,3 +130,12 @@ button {
     background-color:#333;
     }
 
+@media (max-width: 1000px) {
+    .container {
+        grid-template-columns: repeat(1, 1fr);
+    }
+
+    .interest ul {
+        grid-template-columns: repeat(2, 1fr);
+    }
+}
