--- a/src/css/main.css
+++ b/src/css/main.css
@@ -74,7 +74,14 @@ body {
     isolation: isolate;
 }
 
+.info-section {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: center;
     width: 100%;
+    height: 50vh;
+    background-color: var(--main-gray);
 }
 
     text-align: center;
