--- a/src/css/main.css
+++ b/src/css/main.css
@@ -131,19 +131,70 @@ body {
     transition: color 0.3s ease-out;
 }
 
+.btn {
+    display: inline-block;
+    padding: 1rem 2rem;
+    border-radius: 2px;
 }
 
+.btn-show-all {
+    font-size: 2rem;
+    background: var(--main-black);
+    transition: 0.3s ease-out;
 }
 
+.btn-show-all:hover {
+    background: var(--main-red);
 }
 
-
+.btn-show-all:hover > i {
+    transform: translateX(2px);
 }
 
+.btn-show-all > i {
+    margin-left: 10px;
+    transform: translateX(0);
+    transition: transform 0.3s ease-out;
 }
 
+.contact-section {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    height: 80vh;
+    padding: 0 2rem;
+    background: var(--main-black);
+    background-image: linear-gradient(62deg, #3a3d4094 0%, #181719 100%);
 }
 
+.contact-section-header > h2 {
+    font-size: 6rem;
+}
+
+.contact-section-header > p {
+    font-style: italic;
+}
+
+.contact-links {
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    max-width: 980px;
+    margin-top: 4rem;
+    flex-wrap: wrap;
+}
+
+.contact-details {
+    font-size: 2.4rem;
+    text-shadow: 2px 2px 1px #1f1f1f;
+    transition: transform 0.3s ease-out;
+}
+
+.contact-details:hover {
+    transform: translateY(8px);
+    border-bottom: 0.2rem solid var(--main-red);
 }
     }
 
