--- a/src/css/main.css
+++ b/src/css/main.css
@@ -196,6 +196,23 @@ body {
     transform: translateY(8px);
     border-bottom: 0.2rem solid var(--main-red);
 }
+footer {
+    font-weight: 300;
+    display: flex;
+    justify-content: space-around;
+    padding: 2rem;
+    background: var(--main-gray);
+    border-top: 4px solid var(--main-red);
+    isolation: isolate;
+}
+
+footer > p {
+    margin: 2rem;
+}
+
+footer i {
+    vertical-align: middle;
+}
     }
 
     }
