--- a/src/css/main.css
+++ b/src/css/main.css
@@ -58,7 +58,11 @@ img {
     border-radius: 10px;
 }
 
+form {
     display: grid;
+    margin-top: 30px;
+    margin-bottom: 15px;
+    isolation: isolate;
 }
 
 .nav {
